# assimpjs

./: .gitmodules  CMakeLists.txt  pr_summary.md
assimpjs/src/: filelist.cpp
test/: test.js
tools/: build_wasm_deb.sh
